12Mar03=======================================================================
1. added HC and QRZ.com to possible QSL locations, if you want to pick up
historical info (ie start again), run create_qsl.pl after update and restart
the node (which you will need to do anyway).
11Mar03=======================================================================
1. Changed the name of show/qsl to show/dxqsl.
2. Alter Commands_en.hlp to match new name and issue manual updates (g0vgs)
10Mar03=======================================================================
1. added show/qsl command. This command basically takes the normal output of
sh/dx qsl and stores it in a database. In order to enable this command you 
will require the Storable module to be loaded (you will already have done
this with a bit of luck for the new DXUser interface). The suggested 
procedure is (after the update) to run /spider/perl/create_qsl.pl (this may
take a long time), then immediately it finishes, restart the node. The node 
will then keep the database up to date automatically. If you are not 
interested in historical data then you can leave this step out.
2. added show/contest command from Tommy SM3OSM via Rene OZ1LQH.
08Mar03=======================================================================
1. Added chat, join, leave commands to allow general purpose conferencing
on arbitrary subjects. [Translators: added e34,e35,join,leave]. There is
currently no help. There is also sh/chat.
28Feb03=======================================================================
1. Charlie K1XX fixed the sh/iso, sh/reg and sh/node commands
25Feb03=======================================================================
1. backported switch processing for PC sentences
24Feb03=======================================================================
1. add the 'run' command and the 'privilege' command to allow sysops to 
create scripts for people.
2. fix show/user so that it doesn't moan about uninitialised variables