@@ -14,10 +14,15 @@ return (1, $self->msg('db6', $name)) if DXDb::getdesc($name);
 
 my $remote;
 my $chain;
+my $cmd;
 while (@f) {
 	my $f = lc shift @f;
 	if ($f eq 'remote') {
 		$remote = uc shift @f if @f;
+		next;
+	}
+	if ($f eq 'cmd') {
+		$cmd = lc shift @f if @f;
 		next;
 	}
 	if ($f eq 'chain') {
@@ -27,6 +32,6 @@ while (@f) {
 		}
 	}
 }
-DXDb::new($name, $remote, $chain);
+DXDb::new($name, $remote, $chain, $cmd);
 push @out, $self->msg($remote ? 'db7' : 'db8', $name, $remote);
 return (1, @out);
